# JsAudio-Android

./: .clang-tidy  .gitattributes  .gitignore  LICENSE  README.md  index.js  lint-staged.config.js  package.json  ready_mate_config.json  settings.gradle.kts
app/: build.gradle.kts
app/NodeEnvLib/src/main/cpp/: CMakeLists.txt  node_env.cpp
app/audio/: build.gradle.kts
app/audio/src/main/: AndroidManifest.xml
app/audio/src/main/cpp/: CMakeLists.txt  audio_bridge.cpp  preload_script.hpp
app/audio/src/main/cpp/AudioBufferQueuePlayer/: AudioBufferQueuePlayer.cpp  AudioBufferQueuePlayer.hpp
app/audio/src/main/cpp/AudioContext/: AudioContext.hpp
app/audio/src/main/cpp/AudioEngine/: AudioEngine.cpp
app/audio/src/main/cpp/AudioPlayer/: AudioPlayer.cpp  AudioPlayer.hpp
app/audio/src/main/cpp/audio/: audio.cpp  audio.hpp  preload_script.js
app/audio/src/main/cpp/cpp_layer/AudioBuffer/: AudioBuffer.cpp  AudioBuffer.hpp
app/audio/src/main/cpp/cpp_layer/AudioBufferQueuePlayer/: AudioBufferQueuePlayer.cpp  AudioBufferQueuePlayer.hpp
app/audio/src/main/cpp/cpp_layer/AudioBufferSourceNode/: AudioBufferSourceNode.cpp  AudioBufferSourceNode.hpp
app/audio/src/main/cpp/cpp_layer/AudioContext/: AudioContext.cpp  AudioContext.hpp
app/audio/src/main/cpp/cpp_layer/AudioDestinationNode/: AudioDestinationNode.cpp  AudioDestinationNode.hpp
app/audio/src/main/cpp/cpp_layer/AudioEngine/: AudioEngine.cpp  AudioEngine.hpp
app/audio/src/main/cpp/cpp_layer/AudioMixer/: AudioMixer.cpp  AudioMixer.hpp
app/audio/src/main/cpp/cpp_layer/AudioNode/: AudioNode.cpp  AudioNode.hpp
app/audio/src/main/cpp/cpp_layer/AudioParam/: AudioParam.cpp  AudioParam.hpp
app/audio/src/main/cpp/cpp_layer/AudioPlayer/: AudioPlayer.cpp  AudioPlayer.hpp
app/audio/src/main/cpp/cpp_layer/AudioScheduledSourceNode/: AudioScheduledSourceNode.cpp  AudioScheduledSourceNode.hpp
app/audio/src/main/cpp/cpp_layer/BaseAudioContext/: BaseAudioContext.cpp  BaseAudioContext.hpp
app/audio/src/main/cpp/cpp_layer/ChannelMixer/: ChannelMixer.cpp  ChannelMixer.hpp
app/audio/src/main/cpp/cpp_layer/DelayNode/: DelayNode.cpp  DelayNode.hpp
app/audio/src/main/cpp/cpp_layer/GainNode/: GainNode.cpp  GainNode.hpp
app/audio/src/main/cpp/cpp_layer/OfflineAudioContext/: OfflineAudioContext.cpp  OfflineAudioContext.hpp
app/dependency/cpp/node/include/napi_ih/: README.md  napi_ih.hpp  napi_ih_inl.hpp
app/dependency/cpp/node/include/node/: config.gypi
app/dependency/cpp/tool/include/: checker.hpp  logger.hpp  sleeper.hpp  timer.hpp
app/node_env/: build.gradle.kts
app/node_env/src/main/: AndroidManifest.xml
app/node_env/src/main/cpp/: CMakeLists.txt  node_env.cpp  node_env_bridge.cpp  node_jni_env.hpp
app/node_env/src/main/cpp/argv/: Argv.cpp  Argv.hpp
app/node_env/src/main/cpp/include/tools/: sleeper.hpp
app/node_env/src/main/cpp/node_env/: NodeEnv.cpp  NodeEnv.hpp  preload_script.js
app/node_env/src/main/cpp/node_http_require/: node_http_require.cpp  node_http_require.hpp  preload_script.js
app/node_env/src/main/cpp/node_instance/: NodeInstance.cpp  NodeInstance.hpp  preload_script.hpp
app/node_env/src/main/cpp/node_logger/: node_logger.cpp  node_logger.hpp  preload_script.hpp  preload_script.js
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/tools/: logger.hpp
app/src/main/cpp/node_init/: node_init.cpp  node_init.hpp
app/src/main/cpp/node_instance/: NodeInstance.cpp  NodeInstance.hpp
app/src/main/cpp/node_logger/: node_logger.cpp  node_logger.hpp
app/src/main/res/drawable/: button_background.xml  button_text_color.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
docs/: build_nodejs.md  c4model.drawio  develop.md  napi_ih_api.md
gradle/wrapper/: gradle-wrapper.properties
js_api_define/: AudioBuffer.ts  AudioBufferSourceNode.ts  AudioContext.ts  AudioDestinationNode.ts  AudioNode.ts  AudioParam.ts  AudioScheduledSourceNode.ts  BaseAudioContext.ts  DelayNode.ts  GainNode.ts  OfflineAudioCompletionEvent.ts  OfflineAudioContext.ts  OscillatorNode.ts  features.md
js_task/: combine_compile_commands.js  compress.js
js_task/valid_task/: valid.js
js_task/valid_task/wave_producer/: CMakeLists.txt  compile_wave_valid.sh  create_wave_validation_set.py  wave_producer_valid.cpp  wave_valid.js
js_tests/: README.md  audio_buffer_source_node_test.js  audio_buffer_test.js  audio_context_test.js  delay_node_test.js  destination_node_test.js  gain_node_test.js  node_env_test.js  offline_audio_context_test.js  oscillator_test.js
js_tests/wpt_test/: README.md
js_tests/wpt_test/audiobuffer/: audiobuffer-copy-channel.js  audiobuffer-getChannelData.js  audiobuffer.js  ctor-audiobuffer.js
js_tests/wpt_test/audiobuffer/crashtests/: copyFromChannel-bufferOffset-1.js  copyToChannel-bufferOffset-1.js
js_tests/wpt_test/audiobuffersourcenode/: audiobuffersource-basic.js  audiobuffersource-channels.js  audiobuffersource-duration-loop.js  audiobuffersource-grain.js  audiobuffersource-null.js  audiobuffersource-one-sample-loop.js  audiobuffersource-start.js  audiosource-time-limits.js  ctor-audiobuffersource.js  note-grain-on-play.js  note-grain-on-timing.js  sample-accurate-scheduling.js
js_tests/wpt_test/delaynode/: ctor-delay.js  delaynode-max-default-delay.js  delaynode-max-nondefault-delay.js  delaynode-maxdelay.js  delaynode-maxdelaylimit.js  delaynode.js
js_tests/wpt_test/destinationnode/: destination.js
js_tests/wpt_test/gainnode/: ctor-gain.js  gain-basic.js  gain.js
js_tests/wpt_test/helper/: audiobuffersource-testing.js  audionodeoptions.js  audit-util.js  audit.js  delay-testing.js  note-grain-on-testing.js  polyfile.js  ret_formatter.js  start-stop-exceptions.js  testharness.js
js_tests/wpt_test/offline_audio_context/: ctor-offlineaudiocontext.js  current-time-block-size.js
js_tests/wpt_test/oscillator/: ctor-oscillator.js  detune-overflow.js  osc-basic-waveform.js
jsaudio-test/: index.js  package.json
(+46 files in other folders)
